pagina Home-parcial finalizada

--- a/visualizacoes/home.html
+++ b/visualizacoes/home.html
@@ -17,7 +17,7 @@
 
 
 </head>
-<body class="pagina">
+<body class="pagina pagina--home">
     <header class="cabecalho container">
         <div class="cabecalho__titulo subcontainer">
             <h1 class="cabecalho__tituloPagina">Home</h1>
@@ -31,7 +31,7 @@
         </nav>
 
     </header>
-    <main class="container">
+    <main class="container container--home">
         
     </main>     
 </body>
