interface da pagina pesquisaAtividade parcial 1

--- a/visualizacoes/home.html
+++ b/visualizacoes/home.html
@@ -24,9 +24,9 @@
         </div>
         <nav class="cabecalho__navegadores ">
             <ul class="cabecalho__listaNavegadores subcontainer">
-                <li class="cabecalho__itemNavegador cabecalho__ancora--paginaAtual"><a class="cabecalho__ancora" href="#">Home</a></li>
-                <li class="cabecalho__itemNavegador"><a class="cabecalho__ancora" href="#">Pesquisar atividade</a></li>
-                <li class="cabecalho__itemNavegador"><a class="cabecalho__ancora" href="#">Criar atividade</a></li>
+                <li class="cabecalho__itemNavegador "><a class="cabecalho__ancora cabecalho__ancora--paginaAtual" href="#">Home</a></li>
+                <li class="cabecalho__itemNavegador"><a class="cabecalho__ancora" href="/pesquisarAtividades">Pesquisar atividade</a></li>
+                <li class="cabecalho__itemNavegador"><a class="cabecalho__ancora" href="/criarAtividade">Criar atividade</a></li>
             </ul>
         </nav>
 
